test/spec_vectors/store/fail/module_57.wat
(module (memory 1) (func (f32.store (i32.const 0) (i32.const 0))))